[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "hakuin"
version = "0.2.0"
description = "Blind SQL Injection optimization and automation framework"
authors = [{ name = "Jakub Pruzinec", email = "j.pruzinec@gmail.com" }]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "aiohttp",
    "nltk",
    "sqlglot>=26.4.1",
    "tqdm",
]
scripts = { hk = "hakuin.hk:main" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/pruzko/hakuin"


[tool.hatch.build]
include = ["models/*.pkl", "hakuin/**"]


[tool.hatch.build.force-include]
"hk.py" = "hakuin/hk.py"
"models/model_columns.pkl" = "hakuin/models/model_columns.pkl"
"models/model_tables.pkl" = "hakuin/models/model_tables.pkl"
"models/model_schemas.pkl" = "hakuin/models/model_schemas.pkl"